src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_IncludeNonexistentResource1.xaml

<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:System.Collections;assembly=mscorlib">
<sys:ArrayList xmlns:sys="clr-namespace:System.Collections;assembly=mscorlib" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
		<StaticResource ResourceKey="MyButton" />

</sys:ArrayList>
</Page>
